<resources>
    <string name="app_name">GPSDosimeter</string>


    <string name="calibrate_menu_item">Calibrate</string>
    <string name="manage_menu_item">Manage measurements</string>
    <string name="settings_menu_item">Settings</string>

    <string name="new_file_menu_item">New measurement collection</string>
    <string name="open_file_menu_item">Open/remove measurement collection</string>
    <string name="export_menu_item">Share as CSV</string>

    <string name="rad_status_OK">Radiation level safe</string>
    <string name="rad_status_NO_MEAS">No measurement</string>
    <string name="rad_status_BAD">Radiation level unsafe!</string>
    <string name="gps_status_OK">GPS connected</string>
    <string name="gps_status_disconnected">@string/conn_status_ERR</string>
    <string name="gps_status_ERR">GPS error</string>
    <string name="conn_status_OK">Dosimeter connected</string>
    <string name="conn_status_ERR">Dosimeter disconnected</string>
    <string name="meas_and_save_txt">Measure and save</string>
    <string name="comment_txt_placeholder">Comment...</string>

    <string name="working_file_prompt">Measurement collection: </string>
    <string name="fetch_data_btn">Fetch data</string>
    <string name="create_map_btn">Create map of radiation</string>

    <string name="settings_enable_comments">Enable comments</string>
    <string name="settings_new_config">Load default configuration</string>
    <string name="settings_thrshld_val">Alarm value</string>

    <!--Dialogs-->
    <string name="new_file_title">Create new measurement collection</string>
    <string name="new_file_txt">Enter file name</string>
    <string name="new_file_create">Create file</string>
    <string name="rem_file_info">Long click to remove a file</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>

    <!--Failure messages-->
    <string name="empty_or_unrecognisable">File is empty or unrecognisable</string>
    <string name="not_found">Not found</string>

    <string name="title_activity_radiation_map">RadiationMap</string>

    <string name="external_input1">External device measurement #1</string>
    <string name="external_input2">External device measurement #2</string>

    <string name="internal_input1">Internal measurement #1</string>
    <string name="internal_input2">Internal measurement #2</string>


</resources>