<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalibrationActivity">

    <Button
        android:id="@+id/save_internal2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/save"
        android:textColor="@color/rad_yellow"
        app:layout_constraintBottom_toTopOf="@+id/calibrate_confirm_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_input2"
        app:layout_constraintVertical_bias="0.246" />

    <Button
        android:id="@+id/calibrate_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/black"
        android:text="@string/calibrate_menu_item"
        android:textColor="@color/rad_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/external_input2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/external_input2"
        android:textColor="@color/rad_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internal_readout_2" />

    <EditText
        android:id="@+id/external_input2"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/rad_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_input2_txt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mSv/h"
        android:textColor="@color/rad_yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/external_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/external_input2"
        app:layout_constraintTop_toTopOf="@+id/external_input2"
        app:layout_constraintVertical_bias="0.527" />

    <TextView
        android:id="@+id/internal_readout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="152dp"
        android:text="0"
        android:textColor="@color/rad_yellow"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_input1" />

    <TextView
        android:id="@+id/internal_input2_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/internal_input2"
        android:textColor="@color/rad_yellow"
        app:layout_constraintBottom_toTopOf="@+id/internal_readout_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_internal1_btn"
        app:layout_constraintVertical_bias="0.962" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="16dp"
        android:text="mSv/h"
        android:textColor="@color/rad_yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/external_input2_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_input1"
        app:layout_constraintVertical_bias="0.93" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="96dp"
        android:text="mSv/h"
        android:textColor="@color/rad_yellow"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/internal_readout_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save_internal1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/save"
        android:textColor="@color/rad_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_input1" />

    <TextView
        android:id="@+id/external_input1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/external_input1"
        android:textColor="@color/rad_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="mSv/h"
        android:textColor="@color/rad_yellow"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/external_input1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/external_input1"
        app:layout_constraintTop_toTopOf="@+id/external_input1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/internal_input1_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/internal_input1"
        android:textColor="@color/rad_yellow"
        app:layout_constraintBottom_toTopOf="@+id/internal_readout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833" />

    <EditText
        android:id="@+id/external_input1"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/rad_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/external_input1_txt" />

    <TextView
        android:id="@+id/internal_readout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="0"
        android:textColor="@color/rad_yellow"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/external_input1_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

</androidx.constraintlayout.widget.ConstraintLayout>
