<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:menu="@menu/main_menu">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/dseg7"
        android:text="2137.0"
        android:textColor="@color/rad_yellow"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/val_m_txt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/val_m_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="118dp"
        android:fontFamily="@font/dseg14"
        android:text="m"
        android:textColor="@color/rad_yellow"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/val_sv_txt"
        app:layout_constraintEnd_toEndOf="@+id/val_sv_txt" />

    <TextView
        android:id="@+id/val_h_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/dseg7"
        android:text="h"
        android:textColor="@color/rad_yellow"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/val_sv_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dseg14"
        android:text="Sv/"
        android:textColor="@color/rad_yellow"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/val_h_txt"
        app:layout_constraintEnd_toStartOf="@+id/val_h_txt" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/rad_status_led"
        android:layout_width="38sp"
        android:layout_height="37sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:background="@color/rad_green"
        android:padding="5sp"
        android:src="@drawable/logo_square_trans_fore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="00dp" />

    <TextView
        android:id="@+id/rad_status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rad_status_OK"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/rad_status_led"
        app:layout_constraintStart_toEndOf="@+id/rad_status_led" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gps_status_led"
        android:layout_width="38sp"
        android:layout_height="37sp"
        android:layout_marginTop="16dp"
        android:background="@color/rad_red"
        android:padding="5sp"
        android:src="@drawable/logo_square_trans_fore"
        app:layout_constraintStart_toStartOf="@+id/rad_status_led"
        app:layout_constraintTop_toBottomOf="@+id/rad_status_led"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="00dp" />

    <TextView
        android:id="@+id/gps_status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gps_status_ERR"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/gps_status_led"
        app:layout_constraintStart_toEndOf="@+id/gps_status_led" />

    <TextView
        android:id="@+id/conn_status_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/conn_status_OK"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/conn_status_led"
        app:layout_constraintStart_toEndOf="@+id/conn_status_led" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/conn_status_led"
        android:layout_width="38sp"
        android:layout_height="37sp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:background="@color/rad_green"
        android:padding="5sp"
        android:src="@drawable/logo_square_trans_fore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="00dp" />


</androidx.constraintlayout.widget.ConstraintLayout>